CHANGELOG
=========

3.8.0 (2020-01-15)
------------------

* [FEATURE] #6358 added possibility to enable messaging in group-creation

3.7.1 (2019-09-02)
------------------

* [BUG] #6258 Typos fixed
* [FEATURE] #5708 Warning if not enough groups are available for min. registrations added
* [FEATURE] #5295 Deregister user the same way they can be added


3.7.0 (2019-07-23)
------------------

* [BUG] #6198 bug with group ordering fixed
* [BUG] #6199 bug in gourse view with empty grouping fixed
* [FEATURE] #6008 mode helptext splitted
* [FEATURE] #6128 report-editdates support added
* [CHANGED] #5571 calculation of total value change from size to queued + registered


3.6.0 (2019-01-20)
------------------

* Moodle 3.6 compatible version
* merged PR #11 from from germanvaleroelizondo/master fixing a typo in lang strings
* [FEATURE] #5731 added a first behat test adding a grouptool instance
* [FEATURE] #5752 add new core_userlist_provider methods to privacy provider
* [FEATURE] #5834 enable users to look at groups/registrations in frozen contexts and export them
* [FIXED] #5602 fix calculation for fast unit tests
* [FIXED] #5874 fix queue limits for users and groups not being deactivateable
* [FIXED] #5872 prevent users from reaching incorrect_tabs (per default, or otherwise)
* [CHANGED] #5705 standardized labels and strings
* [CHANGED] #5706 unify appearance of information in language strings
* [CHANGED] #5602 reorganized unit test
* [CHANGED] #5602 replace tab in feature file with spaces
* [CHANGED] #5602 remove leading slashes in namespace and use statements
* [UPDATE] #5602 update .travis.yml


3.5.1 (2018-08-28)
------------------

* [FIXED] #5716 fix XLSX and ODS exports missing some user identity fields data for registered users


3.5.0 (2018-07-01)
------------------

* [FEATURE] #5379 implemented privacy API, so we're GDPR conform
* [FEATURE] #5054 if groups are now recreated due to a grouptool's settings, the user gets notified via info-notification also we