@@ -420,10 +420,6 @@ $string['not_registered'] = 'You\'re not yet registered!';
 $string['not_synced_reg_present'] = 'not syncronized registrations present';
 $string['notification:group_recreated'] = 'The group <strong>{$a->groupname}</strong> has been recreated due to grouptool <a href="{$a->grouptoolurl}" title="{$a->grouptoolname}"><strong>{$a->grouptoolname}</strong></a> being set to recreate deleted groups.';
 $string['notification:registrations_recreated'] = 'The group\'s <strong>{$a->groupname}</strong> members have been added again due to grouptool <a href="{$a->grouptoolurl}" title="{$a->grouptoolname}"><strong>{$a->grouptoolname}</strong></a> being set to recreate deleted groups. The group itself was recrated by another grouptool instance.';
-$string['notenoughtotalgroups_min'] = 'The set minimum exceeds the total amount of {$a} groups in this course!';
-$string['notenoughactivegroups_min'] = 'The set minimum exceeds the amount of active groups ({$a}) in this instance!';
-$string['notenoughtotalgroups_max'] = 'The set maximum exceeds the total amount of {$a} groups in this course!';
-$string['notenoughactivegroups_max'] = 'The set maximum exceeds the amount of active groups ({$a}) in this instance!';
 $string['you_are_not_in_queue_or_registered'] = 'You are neither registered nor queued in group <strong>{$a->groupname}</strong>';
 $string['nothing_to_push'] = 'Nothing to push!';
 $string['nowhere_queued'] = 'Not queued';
