@@ -4,6 +4,7 @@ CHANGELOG
 3.8.0 (2020-01-15)
 ------------------
 
+* [FEATURE] #5708 Removed: "Warning if not enough groups are available for min. registrations added"
 * [FEATURE] #6358 added possibility to enable messaging in group-creation
 
 3.7.1 (2019-09-02)
